Closed Bug 14738 Opened 26 years ago Closed 26 years ago

xpcexceptions info for JSErrors is broken

Categories

(Core :: XPConnect, defect, P3)

x86
All
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: jband_mozilla, Assigned: jband_mozilla)

Details

The JS engine's enabling of 'errors as exceptions' broke the system that xpconnect was using to extract JS error info from JS ErrorReports and put that info into the xpcexceptions. This means that where previously when calling 'broken' JS code the caller would get an expection object with nice info about the JS error and its location, now it gets no such details. I have a fix to the engine to expose a function for extracting the JSErrorReport from a JS exception (if present). And I have a code change to xpconnect to use that info if available to return us to the previous functionality of useful and informative exceptions (including the human readable toString version dumped to the console). This will continue to help folks find their JS errors.
Status: NEW → ASSIGNED
Whiteboard: have a fix
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
fix checked in
Keywords: verifyme
Whiteboard: have a fix
mass remove verifyme requests greater than 4 months old
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.